--- a/scss/basic/_base.scss
+++ b/scss/basic/_base.scss
@@ -6,10 +6,12 @@
     padding: 0;
     font-family: 'Lato', sans-serif;
 }
+
 html{
     width: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
+    background-color: $primary-color;
 }
 html,body{
     font-size: 62.5%;
