--- a/scss/pages/_reports.scss
+++ b/scss/pages/_reports.scss
@@ -1,23 +1,26 @@
 .reports {
     padding: 0;
-    background-color: #060b26;
-    border-top: solid white;
+    background-color: $primary-color;
+    border-top: solid $color-white;
     display: flex;
     justify-content: space-evenly;
-    align-items: center; }
+    align-items: center;
+  }
   
   .reportContainer {
     background-color: transparent;
-    width: 18rem;
+    width: 25rem;
     height: 60%;
-    perspective: 1000px; }
+    perspective: 1000px;
+  }
   
   .flipContainer {
     position: relative;
     width: 100%;
     height: 100%;
     transition: transform 0.7s;
-    transform-style: preserve-3d; }
+    transform-style: preserve-3d;
+  }
   
   .reportContainer:hover .flipContainer {
     transform: rotateY(180deg); }
@@ -26,40 +29,45 @@
   .front, .back {
     position: absolute;
     width: 100%;
-    height: 100%;
     -webkit-backface-visibility: hidden;
     /* Safari */
-    backface-visibility: hidden; }
+    backface-visibility: hidden;
+  }
   
   .front {
-    background-color: white;
+    background-color: $color-white;
     border-radius: 15px;
-    padding: 0 0.5rem;
+    padding: 1.5rem;
     display: flex;
     flex-direction: column;
     row-gap: 4rem;
     align-items: center;
-    justify-content: center; }
+    justify-content: center; 
+  }
   
   .front h1 {
     font-size: 2rem;
-    color: #060b26;
+    font-weight: bolder;
+    color: $primary-color;
     text-align: center;
-    text-decoration: underline #060b26; }
+    text-transform: uppercase;
+  }
   
   .front li {
     list-style: none;
-    font-size: 5rem; }
+    font-size: 10rem;
+    
+   }
   
   .front p {
-    font-size: 1.5rem;
-    color: #060b26;
+    font-size: 2rem;
+    color: $primary-color;
     text-align: center; }
   
   .back {
-    background-color: #060b26;
-    color: white;
-    border: white ridge;
+    background-color: $primary-color;
+    color: $color-white;
+    border: $color-white ridge;
     border-radius: 15px;
     padding: 0 0.5rem;
     display: flex;
@@ -68,4 +76,31 @@
     align-items: center;
     justify-content: center;
     transform: rotateY(180deg); }
+
+  .image{
+    width: 100%;
+    height: 70%;
+  }
+
+  @include respond (tab-land){
+    .reports{
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+    .reportContainer{
+      width: 50rem;
+      margin: 2rem;
+      height: 40%;
+    }
+
+    .front{
+      h1{
+        font-size: 4rem;
+      }
+
+      p{
+        font-size: 3rem;
+      }
+    }
+  }
   
